Add html elements for UI

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <script src="rps.js"></script>
   </head>
   <body>
-    
+    <button id="rock" class="option">rock</button>
+    <button id="paper" class="option">paper</button>
+    <button id="scissors" class="option">scissors</button>
+
+    <div class="results"></div>
   </body>
 </html>
