--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="rps.js"></script>
+    <script defer src="rps.js"></script>
   </head>
   <body>
-    <button id="rock" class="option">rock</button>
-    <button id="paper" class="option">paper</button>
-    <button id="scissors" class="option">scissors</button>
+    <button id="rock" class="option">Rock</button>
+    <button id="paper" class="option">Paper</button>
+    <button id="scissors" class="option">Scissors</button>
 
-    <div class="results"></div>
+    <div class="results">Score: 0 - 0</div>
   </body>
 </html>
